update vertical alignment issues

--- a/wp-content/themes/toolbox v2/style.scss
+++ b/wp-content/themes/toolbox v2/style.scss
@@ -1723,7 +1723,7 @@ footer {
 	}
 	&.no-bottom-margin {
 
-		li {
+		li + li {
 			margin-bottom: 0;
 		}
 	}
